[tool.poetry]
name = "zlm"
version = "0.1.35"
description = "Simplify and improve your job hunting experience by integrating LLMs to automate tasks such as resume and cover letter generation, as well as application submission, saving users time and effort."
authors = ["Saurabh Zinjad <zinjadsaurabh1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.6,<3.13"
streamlit = "^1.39.0"
validators = "^0.34.0"
langchain-core = "^0.3.10"
langchain-community = "^0.3.2"
pdf2image = "^1.17.0"
openai = "^1.51.2"
google-generativeai = "^0.8.3"
pypdf2 = "^3.0.1"
beautifulsoup4 = "^4.12.3"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
langchain-ollama = "^0.2.0"
playwright = "^1.47.0"
unstructured = "^0.15.14"
markdown-pdf = "^1.3"
fpdf2 = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"